examples/csharp/encodings/unicode_identifier.cs
/* Generated by re2c 3.0 on Sun Jun  4 15:16:00 2023 */
#line 1 "unicode_identifier.re"
//re2csharp $INPUT -o $OUTPUT -8 -s -i
using System;
using System.Text;

#line 1 "..\\..\\..\\include/unicode_categories.re"
#line 40 "..\\..\\..\\include/unicode_categories.re"

#line 5 "unicode_identifier.re"


class Lexer
{
	static uint Lex(byte[] str) {
		int cur = 0;
		int mar = 0;
	
#line 20 "unicode_identifier.cs"
{
	byte yych;
	uint yyaccept = 0;
	yych = str[cur];
	if (yych <= 0xD6) {
		if (yych <= 0xC3) {
			if (yych <= '^') {
				if (yych <= '$') {
					if (yych >= '$') {
						goto yy3;
					}
				} else {
					if (yych <= '@') {
						goto yy1;
					}
					if (yych <= 'Z') {
						goto yy3;
					}
				}
			} else {
				if (yych <= 'z') {
					if (yych != '`') {
						goto yy3;
					}
				} else {
					if (yych <= 0xC1) {
						goto yy1;
					}
					if (yych <= 0xC2) {
						goto yy5;
					}
					goto yy6;
				}
			}
		} else {
			if (yych <= 0xCF) {
				if (yych <= 0xCC) {
					if (yych <= 0xCA) {
						goto yy7;
					}
					if (yych <= 0xCB) {
						goto yy8;
					}
				} else {
					if (yych <= 0xCD) {
						goto yy9;
					}
					if (yych <= 0xCE) {
						goto yy10;
					}
					goto yy11;
				}
			} else {
				if (yych <= 0xD3) {
					if (yych == 0xD2) {
						goto yy12;
					}
					goto yy7;
				} else {
					if (yych <= 0xD4) {
						goto yy13;
					}
					if (yych <= 0xD5) {
						goto yy14;
					}
					goto yy15;
				}
			}
		}
	} else {
		if (yych <= 0xE1) {
			if (yych <= 0xDB) {
				if (yych <= 0xD8) {
					if (yych <= 0xD7) {
						goto yy16;
					}
					goto yy17;
				} else {
					if (yych <= 0xD9) {
						goto yy18;
					}
					if (yych <= 0xDA) {
						goto yy7;
					}
					goto yy19;
				}
			} else {
				if (yych <= 0xDE) {
					if (yych <= 0xDC) {
						goto yy20;
					}
					if (yych <= 0xDD) {
						goto yy21;
					}
					goto yy22;
				} else {
					if (yych <= 0xDF) {
						goto yy23;
					}
					if (yych <= 0xE0) {
						goto yy24;
					}
					goto yy25;
				}
			}
		} else {
			if (yych <= 0xEA) {
				if (yych <= 0xE4) {
					if (yych <= 0xE2) {
						goto yy26;
					}
					if (yych <= 0xE3) {
						goto yy27;
					}
					goto yy28;
				} else {
					if (yych <= 0xE8) {
						goto yy29;
					}
					if (yych <= 0xE9) {
						goto yy30;
					}
					goto yy31;
				}
			} else {
				if (yych <= 0xEE) {
					if (yych <= 0xEC) {
						goto yy29;
					}
					if (yych <= 0xED) {
						goto yy32;
					}
				} else {
					if (yych <= 0xEF) {
						goto yy33;
					}
					if (yych <= 0xF0) {
						goto yy34;
					}
				}
			}
		}
	}
yy1:
	cur += 1;
yy2:
#line 27 "unicode_identifier.re"
	{ return 1; }
#line 169 "unicode_identifier.cs"
yy3:
	yyaccept = 0;
	cur += 1;
	mar = cur;
	yych = str[cur];
	if (yych <= 0xD6) {
		if (yych <= 0xC2) {
			if (yych <= 'Z') {
				if (yych <= '/') {
					if (yych == '$') {
						goto yy3;
					}
				} else {
					if (yych <= '9') {
						goto yy3;
					}
					if (yych >= 'A') {
						goto yy3;
					}
				}
			} else {
				if (yych <= '`') {
					if (yych == '_') {
						goto yy3;
					}
				} else {
					if (yych <= 'z') {
						goto yy3;
					}
					if (yych >= 0xC2) {
						goto yy35;
					}
				}
			}
		} else {
			if (yych <= 0xCE) {
				if (yych <= 0xCB) {
					if (yych <= 0xC3) {
						goto yy37;
					}
					if (yych <= 0xCA) {
						goto yy38;
					}
					goto yy39;
				} else {
					if (yych <= 0xCC) {
						goto yy38;
					}
					if (yych <= 0xCD) {
						goto yy40;
					}
					goto yy41;
				}
			} else {
				if (yych <= 0xD2) {
					if (yych <= 0xCF) {
						goto yy42;
					}
					if (yych <= 0xD1) {
						goto yy38;
					}
					goto yy43;
				} else {
					if (yych <= 0xD3) {
						goto yy38;
					}
					if (yych <= 0xD4) {
						goto yy44;
					}
					if (yych <= 0xD5) {
						goto yy45;
					}
					goto yy46;
				}
			}
		}
	} else {
		if (yych <= 0xE2) {
			if (yych <= 0xDC) {
				if (yych <= 0xD9) {
					if (yych <= 0xD7) {
						goto yy47;
					}
					if (yych <= 0xD8) {
						goto yy48;
					}
					goto yy49;
				} else {
					if (yych <= 0xDA) {
						goto yy38;
					}
					if (yych <= 0xDB) {
						goto yy50;
					}
					goto yy51;
				}
			} else {
				if (yych <= 0xDF) {
					if (yych <= 0xDD) {
						goto yy52;
					}
					if (yych <= 0xDE) {
						goto yy53;
					}
					goto yy54;
				} else {
					if (yych <= 0xE0) {
						goto yy55;
					}
					if (yych <= 0xE1) {
						goto yy56;
					}
					goto yy57;
				}
			}
		} else {
			if (yych <= 0xEC) {
				if (yych <= 0xE8) {
					if (yych <= 0xE3) {
						goto yy58;
					}
					if (yych <= 0xE4) {
						goto yy59;
					}
					goto yy60;
				} else {
					if (yych <= 0xE9) {
						goto yy61;
					}
					if (yych <= 0xEA) {
						goto yy62;
					}
					goto yy60;
				}
			} else {
				if (yych <= 0xEF) {
					if (yych <= 0xED) {
						goto yy63;
					}
					if (yych >= 0xEF) {
						goto yy64;
					}
				} else {
					if (yych <= 0xF0) {
						goto yy65;
					}
					if (yych == 0xF3) {
						goto yy66;
					}
				}
			}
		}
	}
yy4:
#line 26 "unicode_identifier.re"
	{ return 0; }
#line 326 "unicode_identifier.cs"
yy5:
	cur += 1;
	yych = str[cur];
	if (yych <= 0xB4) {
		if (yych == 0xAA) {
			goto yy3;
		}
		goto yy2;
	} else {
		if (yych <= 0xB5) {
			goto yy3;
		}
		if (yych == 0xBA) {
			goto yy3;
		}
		goto yy2;
	}
yy6:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x97) {
		if (yych <= 0x7F) {
			goto yy2;
		}
		if (yych <= 0x96) {
			goto yy3;
		}
		goto yy2;
	} else {
		if (yych == 0xB7) {
			goto yy2;
		}
		if (yych <= 0xBF) {
			goto yy3;
		}
		goto yy2;
	}
yy7:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy2;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy2;
yy8:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x9F) {
		if (yych <= 0x81) {
			if (yych <= 0x7F) {
				goto yy2;
			}
			goto yy3;
		} else {
			if (yych <= 0x85) {
				goto yy2;
			}
			if (yych <= 0x91) {
				goto yy3;
			}
			goto yy2;
		}
	} else {
		if (yych <= 0xAC) {
			if (yych <= 0xA4) {
				goto yy3;
			}
			if (yych <= 0xAB) {
				goto yy2;
			}
			goto yy3;
		} else {
			if (yych == 0xAE) {
				goto yy3;
			}
			goto yy2;
		}
	}
yy9:
	cur += 1;
	yych = str[cur];
	switch (yych) {
		case >= 0xB0 and <= 0xB4:
		case >= 0xB6 and <= 0xB7:
		case >= 0xBA and <= 0xBD:
		case 0xBF: goto yy3;
		default: goto yy2;
	}
yy10:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x8B) {
		if (yych <= 0x86) {
			if (yych <= 0x85) {
				goto yy2;
			}
			goto yy3;
		} else {
			if (yych <= 0x87) {
				goto yy2;
			}
			if (yych <= 0x8A) {
				goto yy3;
			}
			goto yy2;
		}
	} else {
		if (yych <= 0xA1) {
			if (yych == 0x8D) {
				goto yy2;
			}
			goto yy3;
		} else {
			if (yych <= 0xA2) {
				goto yy2;
			}
			if (yych <= 0xBF) {
				goto yy3;
			}
			goto yy2;
		}
	}
yy11:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy2;
	}
	if (yych == 0xB6) {
		goto yy2;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy2;
yy12:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy2;
	}
	if (yych <= 0x81) {
		goto yy3;
	}
	if (yych <= 0x89) {
		goto yy2;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy2;
yy13:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy2;
	}
	if (yych == 0xB0) {
		goto yy2;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy2;
yy14:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x98) {
		if (yych <= 0x7F) {
			goto yy2;
		}
		if (yych <= 0x96) {
			goto yy3;
		}
		goto yy2;
	} else {
		if (yych <= 0x99) {
			goto yy3;
		}
		if (yych <= 0x9F) {
			goto yy2;
		}
		if (yych <= 0xBF) {
			goto yy3;
		}
		goto yy2;
	}
yy15:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy2;
	}
	if (yych <= 0x88) {
		goto yy3;
	}
	goto yy2;
yy16:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x8F) {
		goto yy2;
	}
	if (yych <= 0xAA) {
		goto yy3;
	}
	if (yych <= 0xAE) {
		goto yy2;
	}
	if (yych <= 0xB2) {
		goto yy3;
	}
	goto yy2;
yy17:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x9F) {
		goto yy2;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy2;
yy18:
	cur += 1;
	yych = str[cur];
	if (yych <= 0xAD) {
		if (yych <= 0x7F) {
			goto yy2;
		}
		if (yych <= 0x8A) {
			goto yy3;
		}
		goto yy2;
	} else {
		if (yych == 0xB0) {
			goto yy2;
		}
		if (yych <= 0xBF) {
			goto yy3;
		}
		goto yy2;
	}
yy19:
	cur += 1;
	yych = str[cur];
	if (yych <= 0xA6) {
		if (yych <= 0x94) {
			if (yych <= 0x7F) {
				goto yy2;
			}
			if (yych <= 0x93) {
				goto yy3;
			}
			goto yy2;
		} else {
			if (yych <= 0x95) {
				goto yy3;
			}
			if (yych <= 0xA4) {
				goto yy2;
			}
			goto yy3;
		}
	} else {
		if (yych <= 0xB9) {
			if (yych <= 0xAD) {
				goto yy2;
			}
			if (yych <= 0xAF) {
				goto yy3;
			}
			goto yy2;
		} else {
			if (yych <= 0xBC) {
				goto yy3;
			}
			if (yych == 0xBF) {
				goto yy3;
			}
			goto yy2;
		}
	}
yy20:
	cur += 1;
	yych = str[cur];
	if (yych == 0x90) {
		goto yy3;
	}
	if (yych <= 0x91) {
		goto yy2;
	}
	if (yych <= 0xAF) {
		goto yy3;
	}
	goto yy2;
yy21:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x8C) {
		goto yy2;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy2;
yy22:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy2;
	}
	if (yych <= 0xA5) {
		goto yy3;
	}
	if (yych == 0xB1) {
		goto yy3;
	}
	goto yy2;
yy23:
	cur += 1;
	yych = str[cur];
	if (yych <= 0xB3) {
		if (yych <= 0x89) {
			goto yy2;
		}
		if (yych <= 0xAA) {
			goto yy3;
		}
		goto yy2;
	} else {
		if (yych <= 0xB5) {
			goto yy3;
		}
		if (yych == 0xBA) {
			goto yy3;
		}
		goto yy2;
	}
yy24:
	yyaccept = 1;
	cur += 1;
	mar = cur;
	yych = str[cur];
	switch (yych) {
		case 0xA0: goto yy67;
		case 0xA1: goto yy68;
		case 0xA2: goto yy69;
		case 0xA4: goto yy70;
		case 0xA5: goto yy71;
		case 0xA6: goto yy72;
		case 0xA7: goto yy73;
		case 0xA8: goto yy74;
		case 0xA9: goto yy75;
		case 0xAA: goto yy76;
		case 0xAB: goto yy77;
		case 0xAC: goto yy78;
		case 0xAD: goto yy79;
		case 0xAE: goto yy80;
		case 0xAF: goto yy81;
		case 0xB0: goto yy82;
		case 0xB1: goto yy83;
		case 0xB2: goto yy84;
		case 0xB3: goto yy85;
		case 0xB4: goto yy86;
		case 0xB5: goto yy87;
		case 0xB6: goto yy88;
		case 0xB7:
		case 0xB9: goto yy89;
		case 0xB8: goto yy90;
		case 0xBA: goto yy91;
		case 0xBB: goto yy92;
		case 0xBC: goto yy93;
		case 0xBD: goto yy94;
		case 0xBE: goto yy95;
		default: goto yy2;
	}
yy25:
	yyaccept = 1;
	cur += 1;
	mar = cur;
	yych = str[cur];
	switch (yych) {
		case 0x80: goto yy96;
		case 0x81: goto yy97;
		case 0x82: goto yy98;
		case 0x83: goto yy99;
		case >= 0x84 and <= 0x88:
		case >= 0x91 and <= 0x98:
		case >= 0xB4 and <= 0xB6:
		case >= 0xB8 and <= 0xBB: goto yy38;
		case 0x89: goto yy100;
		case 0x8A: goto yy101;
		case 0x8B: goto yy102;
		case 0x8C: goto yy103;
		case 0x8D: goto yy104;
		case 0x8E: goto yy105;
		case 0x8F: goto yy106;
		case 0x90: goto yy107;
		case 0x99: goto yy108;
		case 0x9A: goto yy109;
		case 0x9B: goto yy110;
		case 0x9C: goto yy111;
		case 0x9D: goto yy112;
		case 0x9E: goto yy113;
		case 0x9F: goto yy114;
		case 0xA0: goto yy115;
		case 0xA1: goto yy116;
		case 0xA2: goto yy117;
		case 0xA3: goto yy118;
		case 0xA4: goto yy119;
		case 0xA5: goto yy120;
		case 0xA6: goto yy121;
		case 0xA7: goto yy122;
		case 0xA8: goto yy123;
		case 0xA9: goto yy124;
		case 0xAA: goto yy125;
		case 0xAC: goto yy126;
		case 0xAD: goto yy127;
		case 0xAE: goto yy128;
		case 0xAF: goto yy129;
		case 0xB0: goto yy130;
		case 0xB1: goto yy131;
		case 0xB2: goto yy132;
		case 0xB3: goto yy133;
		case 0xBC: goto yy134;
		case 0xBD: goto yy135;
		case 0xBE: goto yy136;
		case 0xBF: goto yy137;
		default: goto yy2;
	}
yy26:
	yyaccept = 1;
	cur += 1;
	mar = cur;
	yych = str[cur];
	if (yych <= 0xB0) {
		if (yych <= 0x83) {
			if (yych <= 0x80) {
				goto yy2;
			}
			if (yych <= 0x81) {
				goto yy138;
			}
			if (yych <= 0x82) {
				goto yy139;
			}
			goto yy2;
		} else {
			if (yych <= 0x85) {
				if (yych <= 0x84) {
					goto yy140;
				}
				goto yy141;
			} else {
				if (yych <= 0x86) {
					goto yy142;
				}
				if (yych <= 0xAF) {
					goto yy2;
				}
				goto yy143;
			}
		}
	} else {
		if (yych <= 0xB4) {
			if (yych <= 0xB1) {
				goto yy144;
			}
			if (yych <= 0xB2) {
				goto yy38;
			}
			if (yych <= 0xB3) {
				goto yy145;
			}
			goto yy146;
		} else {
			if (yych <= 0xB6) {
				if (yych <= 0xB5) {
					goto yy147;
				}
				goto yy148;
			} else {
				if (yych <= 0xB7) {
					goto yy149;
				}
				if (yych <= 0xB8) {
					goto yy150;
				}
				goto yy2;
			}
		}
	}
yy27:
	yyaccept = 1;
	cur += 1;
	mar = cur;
	yych = str[cur];
	if (yych <= 0x84) {
		if (yych <= 0x81) {
			if (yych <= 0x7F) {
				goto yy2;
			}
			if (yych <= 0x80) {
				goto yy151;
			}
			goto yy107;
		} else {
			if (yych <= 0x82) {
				goto yy152;
			}
			if (yych <= 0x83) {
				goto yy153;
			}
			goto yy154;
		}
	} else {
		if (yych <= 0x87) {
			if (yych <= 0x85) {
				goto yy38;
			}
			if (yych <= 0x86) {
				goto yy155;
			}
			goto yy156;
		} else {
			if (yych <= 0x8F) {
				goto yy2;
			}
			if (yych <= 0xBF) {
				goto yy38;
			}
			goto yy2;
		}
	}
yy28:
	yyaccept = 1;
	cur += 1;
	mar = cur;
	yych = str[cur];
	if (yych <= 0xB6) {
		if (yych <= 0x7F) {
			goto yy2;
		}
		if (yych <= 0xB5) {
			goto yy38;
		}
		goto yy118;
	} else {
		if (yych <= 0xB7) {
			goto yy2;
		}
		if (yych <= 0xBF) {
			goto yy38;
		}
		goto yy2;
	}
yy29:
	yyaccept = 1;
	cur += 1;
	mar = cur;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy2;
	}
	if (yych <= 0xBF) {
		goto yy38;
	}
	goto yy2;
yy30:
	yyaccept = 1;
	cur += 1;
	mar = cur;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy2;
	}
	if (yych <= 0xBE) {
		goto yy38;
	}
	if (yych <= 0xBF) {
		goto yy157;
	}
	goto yy2;
yy31:
	yyaccept = 1;
	cur += 1;
	mar = cur;
	yych = str[cur];
	switch (yych) {
		case >= 0x80 and <= 0x91:
		case >= 0x94 and <= 0x97:
		case 0x9D:
		case 0xAE:
		case >= 0xB0 and <= 0xBF: goto yy38;
		case 0x92: goto yy158;
		case 0x93: goto yy159;
		case 0x98: goto yy160;
		case 0x99: goto yy161;
		case 0x9A: goto yy162;
		case 0x9B: goto yy157;
		case 0x9C: goto yy163;
		case 0x9E: goto yy164;
		case 0x9F: goto yy165;
		case 0xA0: goto yy166;
		case 0xA1: goto yy113;
		case 0xA2: goto yy167;
		case 0xA3: goto yy168;
		case 0xA4: goto yy169;
		case 0xA5: goto yy170;
		case 0xA6: goto yy171;
		case 0xA7: goto yy172;
		case 0xA8: goto yy173;
		case 0xA9: goto yy174;
		case 0xAA: goto yy175;
		case 0xAB: goto yy176;
		case 0xAC: goto yy177;
		case 0xAD: goto yy178;
		case 0xAF: goto yy179;
		default: goto yy2;
	}
yy32:
	yyaccept = 1;
	cur += 1;
	mar = cur;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy2;
	}
	if (yych <= 0x9D) {
		goto yy38;
	}
	if (yych <= 0x9E) {
		goto yy180;
	}
	if (yych <= 0x9F) {
		goto yy181;
	}
	goto yy2;
yy33:
	yyaccept = 1;
	cur += 1;
	mar = cur;
	yych = str[cur];
	switch (yych) {
		case >= 0xA4 and <= 0xA8:
		case 0xAA:
		case >= 0xB0 and <= 0xB3:
		case 0xBA: goto yy38;
		case 0xA9: goto yy182;
		case 0xAB: goto yy183;
		case 0xAC: goto yy184;
		case 0xAD: goto yy185;
		case 0xAE: goto yy53;
		case 0xAF: goto yy186;
		case 0xB4: goto yy187;
		case 0xB5: goto yy51;
		case 0xB6: goto yy188;
		case 0xB7: goto yy189;
		case 0xB9: goto yy190;
		case 0xBB: goto yy191;
		case 0xBC: goto yy192;
		case 0xBD: goto yy193;
		case 0xBE: goto yy194;
		case 0xBF: goto yy195;
		default: goto yy2;
	}
yy34:
	yyaccept = 1;
	cur += 1;
	mar = cur;
	yych = str[cur];
	switch (yych) {
		case 0x90: goto yy196;
		case 0x91: goto yy197;
		case 0x92: goto yy198;
		case 0x93: goto yy199;
		case 0x94: goto yy200;
		case 0x96: goto yy201;
		case 0x97:
		case >= 0xA0 and <= 0xA9:
		case 0xAD: goto yy60;
		case 0x98: goto yy202;
		case 0x9B: goto yy203;
		case 0x9D: goto yy204;
		case 0x9E: goto yy205;
		case 0xAA: goto yy206;
		case 0xAB: goto yy207;
		case 0xAC: goto yy208;
		case 0xAE: goto yy209;
		case 0xAF: goto yy210;
		default: goto yy2;
	}
yy35:
	cur += 1;
	yych = str[cur];
	if (yych <= 0xB4) {
		if (yych == 0xAA) {
			goto yy3;
		}
	} else {
		if (yych <= 0xB5) {
			goto yy3;
		}
		if (yych == 0xBA) {
			goto yy3;
		}
	}
yy36:
	cur = mar;
	if (yyaccept == 0) {
		goto yy4;
	} else {
		goto yy2;
	}
yy37:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x97) {
		if (yych <= 0x7F) {
			goto yy36;
		}
		if (yych <= 0x96) {
			goto yy3;
		}
		goto yy36;
	} else {
		if (yych == 0xB7) {
			goto yy36;
		}
		if (yych <= 0xBF) {
			goto yy3;
		}
		goto yy36;
	}
yy38:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy36;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy36;
yy39:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x9F) {
		if (yych <= 0x81) {
			if (yych <= 0x7F) {
				goto yy36;
			}
			goto yy3;
		} else {
			if (yych <= 0x85) {
				goto yy36;
			}
			if (yych <= 0x91) {
				goto yy3;
			}
			goto yy36;
		}
	} else {
		if (yych <= 0xAC) {
			if (yych <= 0xA4) {
				goto yy3;
			}
			if (yych <= 0xAB) {
				goto yy36;
			}
			goto yy3;
		} else {
			if (yych == 0xAE) {
				goto yy3;
			}
			goto yy36;
		}
	}
yy40:
	cur += 1;
	yych = str[cur];
	if (yych <= 0xB7) {
		if (yych <= 0x7F) {
			goto yy36;
		}
		if (yych == 0xB5) {
			goto yy36;
		}
		goto yy3;
	} else {
		if (yych <= 0xBD) {
			if (yych <= 0xB9) {
				goto yy36;
			}
			goto yy3;
		} else {
			if (yych == 0xBF) {
				goto yy3;
			}
			goto yy36;
		}
	}
yy41:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x8B) {
		if (yych <= 0x86) {
			if (yych <= 0x85) {
				goto yy36;
			}
			goto yy3;
		} else {
			if (yych <= 0x87) {
				goto yy36;
			}
			if (yych <= 0x8A) {
				goto yy3;
			}
			goto yy36;
		}
	} else {
		if (yych <= 0xA1) {
			if (yych == 0x8D) {
				goto yy36;
			}
			goto yy3;
		} else {
			if (yych <= 0xA2) {
				goto yy36;
			}
			if (yych <= 0xBF) {
				goto yy3;
			}
			goto yy36;
		}
	}
yy42:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy36;
	}
	if (yych == 0xB6) {
		goto yy36;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy36;
yy43:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x82) {
		if (yych <= 0x7F) {
			goto yy36;
		}
		if (yych <= 0x81) {
			goto yy3;
		}
		goto yy36;
	} else {
		if (yych <= 0x87) {
			goto yy3;
		}
		if (yych <= 0x89) {
			goto yy36;
		}
		if (yych <= 0xBF) {
			goto yy3;
		}
		goto yy36;
	}
yy44:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy36;
	}
	if (yych == 0xB0) {
		goto yy36;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy36;
yy45:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x98) {
		if (yych <= 0x7F) {
			goto yy36;
		}
		if (yych <= 0x96) {
			goto yy3;
		}
		goto yy36;
	} else {
		if (yych <= 0x99) {
			goto yy3;
		}
		if (yych <= 0x9F) {
			goto yy36;
		}
		if (yych <= 0xBF) {
			goto yy3;
		}
		goto yy36;
	}
yy46:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x90) {
		if (yych <= 0x7F) {
			goto yy36;
		}
		if (yych <= 0x88) {
			goto yy3;
		}
		goto yy36;
	} else {
		if (yych == 0xBE) {
			goto yy36;
		}
		if (yych <= 0xBF) {
			goto yy3;
		}
		goto yy36;
	}
yy47:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x86) {
		if (yych <= 0x82) {
			if (yych <= 0x80) {
				goto yy36;
			}
			goto yy3;
		} else {
			if (yych <= 0x83) {
				goto yy36;
			}
			if (yych <= 0x85) {
				goto yy3;
			}
			goto yy36;
		}
	} else {
		if (yych <= 0xAA) {
			if (yych <= 0x87) {
				goto yy3;
			}
			if (yych <= 0x8F) {
				goto yy36;
			}
			goto yy3;
		} else {
			if (yych <= 0xAE) {
				goto yy36;
			}
			if (yych <= 0xB3) {
				goto yy3;
			}
			goto yy36;
		}
	}
yy48:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x8F) {
		goto yy36;
	}
	if (yych <= 0x9A) {
		goto yy3;
	}
	if (yych <= 0x9F) {
		goto yy36;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy36;
yy49:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy36;
	}
	if (yych <= 0xA9) {
		goto yy3;
	}
	if (yych <= 0xAD) {
		goto yy36;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy36;
yy50:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x9E) {
		if (yych <= 0x93) {
			if (yych <= 0x7F) {
				goto yy36;
			}
			goto yy3;
		} else {
			if (yych <= 0x94) {
				goto yy36;
			}
			if (yych <= 0x9C) {
				goto yy3;
			}
			goto yy36;
		}
	} else {
		if (yych <= 0xBC) {
			if (yych == 0xA9) {
				goto yy36;
			}
			goto yy3;
		} else {
			if (yych == 0xBF) {
				goto yy3;
			}
			goto yy36;
		}
	}
yy51:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x8F) {
		goto yy36;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy36;
yy52:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy36;
	}
	if (yych <= 0x8A) {
		goto yy3;
	}
	if (yych <= 0x8C) {
		goto yy36;
	}
	if (yych <= 0xBF) {
		goto yy3;
	}
	goto yy36;
yy53:
	cur += 1;
	yych = str[cur];
	if (yych <= 0x7F) {
		goto yy36;
	}
	if (yych <= 0xB1) {
		goto yy3;
	}
	goto yy36;
yy54:
	cur += 1;
	yych = str[cur];
	if (yych <= 0xB9) {
		if (yych <= 0x7F) {
			goto yy36;
		}
		if (yych <= 0xB5) {
			goto yy3;
		}
		goto yy36;
	} else {
		if (yych <= 0xBA) {
			goto yy3;
		}
		if (yych == 0xBD) {
			goto yy3;
		}
		goto yy36;
	}
yy55:
	cur += 1;
	yych = str[cur];
	switch (yych) {
		case 0xA0: goto yy211;
		case 0xA1: goto yy212;
		case 0xA2: goto yy69;
		case 0xA3: goto yy213;
		case 0xA4: goto yy38;
		case 0xA5: goto yy214;
		case 0xA6: goto yy215;
		case 0xA7: goto yy216;
		case 0xA8: goto yy217;
		case 0xA9: goto yy218;
		case 0xAA: goto yy219;
		case 0xAB: goto yy220;
		case 0xAC: goto yy221;
		case 0xAD: goto yy222;
		case 0xAE: goto yy223;
		case 0xAF: goto yy224;
		case 0xB0: goto yy225;
		case 0xB1: goto yy226;
		case 0xB2: goto yy227;
		case 0xB3: goto yy228;
		case 0xB4: goto yy229;
		case 0xB5: goto yy230;
		case 0xB6: goto yy231;
		case 0xB7: goto yy232;
		case 0xB8: goto yy233;
		case 0xB9: goto yy234;
		case 0xBA: goto yy235;
		case 0xBB: goto yy236;
		case 0xBC: goto yy237;
		case 0xBD: goto yy238;
		case 0xBE: goto yy239;
		case 0xBF: goto yy240;
		default: goto yy36;
	}
yy56:
	cur += 1;
	yych = str[cur];
	switch (yych) {
		case 0x80:
		case >= 0x84 and <= 0x88:
		case >= 0x91 and <= 0x98:
		case 0x9E:
		case 0xAC:
		case 0xAE:
		case >= 0xB4 and <= 0xB6:
		case >= 0xB8 and <= 0xBB: goto yy38;
		case 0x81: goto yy241;
		case 0x82: goto yy162;
		case 0x83: goto yy99;
		case 0x89: goto yy100;
		case 0x8A: goto yy101;
		case 0x8B: goto yy102;
		case 0x8C: goto yy103;
		case 0x8D: goto yy242;
		case 0x8E: goto yy105;
		case 0x8F: goto yy106;
		case 0x90: goto yy107;
		case 0x99: goto yy108;
		case 0x9A: goto yy109;
		case 0x9B: goto yy110;
		case 0x9C: goto yy243;
		case 0x9D: goto yy244;
		case 0x9F: goto yy245;
		case 0xA0: goto yy246;
		case 0xA1: goto yy116;
		case 0xA2: goto yy247;
		case 0xA3: goto yy118;
		case 0xA4: goto yy248;
		case 0xA5: goto yy249;
		case 0xA6: goto yy121;
		case 0xA7: goto yy250;
		case 0xA8: goto yy251;
		case 0xA9: goto yy252;
		case 0xAA: goto yy253;
		case 0xAD: goto yy254;
		case 0xAF: goto yy113;
		case 0xB0: goto yy255;
		case 0xB1: goto yy256;
		case 0xB2: goto yy132;
		case 0xB3: goto yy257;
		case 0xB7: goto yy258;
		case 0xBC: goto yy134;
		case 0xBD: goto yy135;
